--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		}
 	</style>
 
-	<link rel="shortcut icon" href="favicon.png">
+	<link rel="icon" type="image/x-icon" href="./favicon.png">
 	<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png" />
